# py-astropc

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyproject.toml~
.github/workflows/: python-package.yml
astropc/: coco.py  kepler.py  mathutils.py  nutation.py  obliq.py
astropc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
astropc/moon/: __init__.py  lunations.py  moon.py
astropc/planets/: __init__.py  ids.py  orbit.py  pert.py  planet.py  sphera.py
astropc/sun/: __init__.py  solequ.py  sun.py
astropc/timeutils/: __init__.py  deltat.py  julian.py  sidereal.py
examples/: julian.py
tests/: test_coco.py  test_deltat.py  test_julian.py  test_kepler.py  test_lunations.py  test_mathutils.py  test_moon.py  test_nutation.py  test_obliquity.py  test_orbit.py  test_planets.py  test_sidereal.py  test_sphera.py  test_sun.py
